--- a/dash.css
+++ b/dash.css
@@ -21,7 +21,7 @@ body{
     transform: translate(-10px,-8px);
 }
 
-
+/* Nav Bar */
 .nav {
   display: inline-flex;
   position: relative;
@@ -83,4 +83,39 @@ body{
 
 @media (max-width: 580px) {
   .nav { overflow: auto; }
+}
+
+
+
+
+
+/* Canvas on Visuals Page */
+
+.canvas{
+    border:1px solid black; 
+    left: 220; 
+    top: 250; 
+    position: absolute; 
+    background-color: aqua; /* For browsers that do not support gradients */
+    background-image: linear-gradient(rgba(255,0,0,0.8), rgba(255,50,0,0.8), rgba(255,80,0,0.8),rgba(255,100,0,0.8), rgba(255,120,10,0.6), rgba(230,170,40,0.5), rgba(204,255,102,0.5)); /* Standard syntax (must be last) */
+}
+
+.graphtitle{
+    font-family: monospace;
+    position: absolute;
+    top:180px;
+    left: 400px;
+}
+
+.grlabel1{
+    transform: rotate(-90deg);
+    left:-30px;
+    top:460px;
+    position: absolute;
+}
+
+.grlabel2{
+    left:680px;
+    top:730px;
+    position: absolute;
 }
