--- a/dash.css
+++ b/dash.css
@@ -97,11 +97,11 @@ body{
     background-image: linear-gradient(rgba(255,0,0,0.8), rgba(255,50,0,0.8), rgba(255,80,0,0.8),rgba(255,100,0,0.8), rgba(255,120,10,0.6), rgba(230,170,40,0.5), rgba(204,255,102,0.5)); /* Standard syntax (must be last) */
 }
 
-.graphtitle{
+.subtitle{
     font-family: monospace;
     position: absolute;
-    top:180px;
-    left: 400px;
+    top:160px;
+    left: 600px;
 }
 
 .grlabel1{
